<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Mahali GPS Logger</string>
    <string name="step1">Click to enumerate USB serial adapters</string>
    <string name="action_settings">Settings and Files</string>
    <string name="action_restoreDefault">Restore default GPS config</string>
    <string name="button_config_gps">Edit GPS Config</string>
    <string name="sessionToggleOn">Running</string>
    <string name="sessionToggleOff">Stopped</string>
    <string name="toggleLabel">Session control:</string>
    <string name="prevSessionLabel">Previous Sessions:</string>
    <string name="title_activity_config">Edit GPS Configuration</string>
    <string name="hello_world">GPS Configuration:</string>
    <string name="button_load">Load fom external</string>
    <string name="button_save">Save</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_set_db_dir">Set DB upload dir </string>
    <!--<string name="button_set_port">Set Server Port </string>-->
    <!--<string name="button_download_files">Download files from server</string>-->
    <string name="button_delete_files">Delete files with substring: </string>

    <string-array name="sessionLongMenu">
        <item>Share</item>
        <item>Delete</item>
    </string-array>

</resources>
