<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mahali.gpslogger.ConfigActivity">

    <TextView android:text="@string/hello_world" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        style="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textNoSuggestions|textMultiLine"
        android:id="@+id/editTextConfig"
        android:gravity="left|top"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="false"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="false"
        android:background="#d0ffffff"
        android:typeface="monospace"
        style="@style/Base.Widget.AppCompat.EditText"
        android:nestedScrollingEnabled="false"
        android:layout_below="@+id/textView"
        android:layout_above="@+id/linearLayout" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:id="@+id/linearLayout"
        android:gravity="center_horizontal">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:id="@+id/buttonSave"
            android:onClick="onSaveButtonClicked" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_load"
            android:id="@+id/buttonLoad"
            android:onClick="onLoadButtonClicked"
            android:enabled="false" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/buttonCancel"
            android:onClick="onCancelButtonClicked" />
    </LinearLayout>

</RelativeLayout>
