<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.mahali.gpslogger.ConfigActivity$PlaceholderFragment">

    <TextView android:text="@string/hello_world" android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/textView"
        style="@style/Base.TextAppearance.AppCompat.Medium" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textMultiLine"
        android:id="@+id/editTextConfig"
        android:layout_below="@+id/textView"
        android:text="Config goes here"
        android:gravity="left|top"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:background="#d0ffffff"
        android:typeface="monospace"
        android:layout_above="@+id/buttonGrid"
        style="@style/Base.Widget.AppCompat.EditText"
        android:nestedScrollingEnabled="false" />

    <GridLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="1"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:useDefaultMargins="true"
        android:id="@+id/buttonGrid">

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_save"
            android:id="@+id/buttonSave"
            android:layout_alignParentBottom="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_load"
            android:id="@+id/buttonLoad"
            android:layout_alignParentBottom="true"
            android:layout_toRightOf="@+id/textView"
            android:layout_toEndOf="@+id/textView" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/button_cancel"
            android:id="@+id/buttonCancel"
            android:layout_alignTop="@+id/buttonLoad"
            android:layout_alignParentRight="true"
            android:layout_alignParentEnd="true" />
    </GridLayout>

</RelativeLayout>
